# zero2prodv1-legacy

./: Cargo.toml
.github/workflows/: general.yml
migrations/: 20221125005008_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
